--- a/scss/style.css
+++ b/scss/style.css
@@ -487,6 +487,11 @@ hr {
 }
 
 /* New styles for responsiveness */
+.toggle-button.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
 .toggle-button {
   display: none;
   background-color: #6c8d3c;
