--- a/scss/style.css
+++ b/scss/style.css
@@ -487,13 +487,8 @@ hr {
 }
 
 /* New styles for responsiveness */
-.toggle-button.hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
 .toggle-button {
-  display: none;
+  display: block;
   background-color: #6c8d3c;
   color: white;
   border: none;
