--- a/scss/style.css
+++ b/scss/style.css
@@ -488,6 +488,7 @@ hr {
 
 /* New styles for responsiveness */
 .toggle-button {
+  display: none;
   background-color: #6c8d3c;
   color: #fff;
   border: 2px solid #fff;
@@ -548,6 +549,9 @@ hr {
     z-index: 2000;
     border-radius: 0px;
     padding: 120px 30px 30px 30px;
+  }
+  .toggle-button {
+    display: block;
   }
   .sidebar h3 {
     font-size: 26px;
