--- a/scss/style.scss
+++ b/scss/style.scss
@@ -570,7 +570,7 @@ hr {
     border: 2px solid #fff;
     padding: 10px;
     font-size: 22px;
-    
+    z-index: 999;
     width: 60px;
     height: 60px;
     border-radius: 50%;
