--- a/scss/style.css
+++ b/scss/style.css
@@ -488,7 +488,7 @@ hr {
 
 /* New styles for responsiveness */
 .toggle-button {
-  display: none;
+  display: none !important;
   background-color: #6c8d3c;
   color: #fff;
   border: 2px solid #fff;
@@ -549,7 +549,7 @@ hr {
     padding: 120px 30px 30px 30px;
   }
   .toggle-button {
-    display: block;
+    display: block !important;
     position: fixed; /* Ensure it stays in place */
     top: 30px; /* Adjust as needed */
     left: 30px; /* Adjust as needed */
