--- a/scss/style.scss
+++ b/scss/style.scss
@@ -629,7 +629,10 @@ hr {
         position: fixed; /* Ensure it stays in place */
         top: 30px;       /* Adjust as needed */
         left: 30px;     /* Adjust as needed */
-        z-index: 1001;   /* Higher than sidebar */
+        z-index: 1001; 
+        display: flex !important;
+        justify-content: center!important;
+        align-items: center!important;  /* Higher than sidebar */
     }
     .sidebar h3 {
         font-size: 26px;
